--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rm -rf dist && babel backend -d dist && cd frontend && npm install && npm run build",
     "start": "nodemon index.js"
   },
   "keywords": [],
